Added errorprone checks (#121)
Added errorprone plugin.
Fixed all errors and warnings that it reported.