@@ -218,8 +218,11 @@ final class POJOWorkflowImplementationFactory implements ReplayWorkflowFactory {
     private void newInstance() {
       if (workflow == null) {
         try {
-          workflow = workflowImplementationClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+          workflow = workflowImplementationClass.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException
+            | InstantiationException
+            | IllegalAccessException
+            | InvocationTargetException e) {
           // Error to fail decision as this can be fixed by a new deployment.
           throw new Error(
               "Failure instantiating workflow implementation class "
